; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdin_rx_chr.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdin_rx_chr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_hal_stdin_rx_chr() #0 {
  br label %1

1:                                                ; preds = %6, %0
  %2 = call i64 (...) @uart_rx_any()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %1
  %5 = call i32 (...) @uart_rx_char()
  ret i32 %5

6:                                                ; preds = %1
  br label %1
}

declare dso_local i64 @uart_rx_any(...) #1

declare dso_local i32 @uart_rx_char(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
